# BTC2BCT-Rust

./: .gitignore  Cargo.toml  Dockerfile
src/: Helper.rs  Main.rs  WalletGenerator.rs
src/data/finds/: README.md
