[package]
name = "btc2bct"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.5"
bitcoin = "0.32.2"
bip39 = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "btc2bct"
path = "src/Main.rs"