[package]
name = "btc2bct"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.6"
bitcoin = { version = "0.23.0", features = ["rand"] }
bip39 = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "btc2bct"
path = "src/Main.rs"